# -linux-_project_opencv_usb_camera_streaming

./: CMakeLists.txt  README.md  cmake_clean.sh  cmake_make_project.sh
src/: main.cpp
